--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -24,7 +24,7 @@
 	}
 }
 
-@media screen and (max-width: 579px){
+@media screen and (max-width: 579px) {
 	.side,
 	.photo img {
 		@apply rounded-tr-xl;
@@ -52,9 +52,8 @@
 }
 
 h1, h2, h3 {
-	margin: 0;
 	@apply font-extrabold;
-	@apply p-0;
+	@apply p-0 m-0;
 }
 
 .title {
@@ -64,21 +63,23 @@ h1, h2, h3 {
 }
 
 .title h3 {
-	@apply text-left uppercase font-bold;
+	@apply uppercase font-bold;
+	@apply text-left text-xl;
 	@apply text-slate-800;
-	@apply border-solid;
-	@apply border-b-2;
+	@apply border-solid border-b-2;
 	@apply border-slate-500;
-	font-size: 1.3em;
 	flex: 1;
 }
 
-/* .side, .main { */
-/* 	width: 100%; */
-/* } */
+.content {
+	@apply py-1 px-2 m-0.5;
+	height: auto;
+	white-space: initial;
+	/* word-break: break-all; */
+	word-wrap: normal;
+}
 
 .photo img {
-	object-fit: cover;
 	width: 100%;
 	aspect-ratio: 1 / 1;
 }
@@ -89,69 +90,50 @@ h1, h2, h3 {
 	z-index: 1;
 }
 
-button.edit-btn, .header button {
-	margin: 0;
-	padding: 10px;
-	display: flex;
-	justify-items: center;
-	align-items: center;
+.edit-btn, .settings-btn {
+	@apply justify-center items-center;
+	@apply m-0 p-1;
 }
 
-button img {
-	width: 22px;
-	height: 22px;
-	object-fit: cover;
+button > img {
+	@apply w-6 h-6;
 }
 
 form {
-	@apply rounded-md;
-	@apply p-2;
-	@apply m-1;
+	@apply p-1 m-1;
 }
 
 form > div,
-form label {
-	@apply flex;
-	flex: 1;
+form > div label {
+	display: flex;
 }
 
-.dates > div {
+form > div label {
 	flex: 1;
 }
 
 input:not([type="submit"]), textarea, select {
-	width: 100%;
-	@apply p-2.5 m-2;
+	width: min(400px, 100%);
+	@apply p-2.5 m-1;
 	@apply rounded-md;
 	@apply text-white;
-	outline: none;
-	border: none;
-	flex: 1;
-}
-
-.side input:not([type="submit"]),
-.side textarea,
-.side select {
 	@apply bg-cyan-700;
 	@apply placeholder-cyan-900;
+	outline: none;
+	border: none;
 }
 
-.main input:not([type="submit"]),
-.main textarea,
-.main select {
-	@apply bg-gray-200 text-slate-700;
+.main input:not([type="submit"]) {
+	@apply bg-gray-200;
+	@apply text-slate-700;
 	@apply placeholder-gray-400;
 }
 
 input[type=submit] {
 	@apply px-7 py-2.5;
 	@apply text-white;
-	@apply text-cyan-300;
-	@apply bg-cyan-900;
+	@apply bg-cyan-800;
 	@apply m-3 font-bold;
-}
-
-button.edit-btn, input[type=submit] {
 	border: none;
 	font-size: 16px;
 	letter-spacing: 0.6px;
