--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -67,7 +67,7 @@ h1, h2, h3 {
 	@apply text-left text-xl;
 	@apply text-slate-800;
 	@apply border-solid border-b-2;
-	@apply border-slate-500;
+	@apply border-slate-800;
 	flex: 1;
 }
 
@@ -77,6 +77,7 @@ h1, h2, h3 {
 	white-space: initial;
 	/* word-break: break-all; */
 	word-wrap: normal;
+	@apply text-slate-700;
 }
 
 .photo img {
