--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -48,6 +48,7 @@
 .header {
 	@apply flex items-center justify-between;
 	@apply sticky top-0 left-0;
+	@apply backdrop-blur-xl;
 	z-index: 2;
 }
 
@@ -77,7 +78,6 @@ h1, h2, h3 {
 	white-space: initial;
 	/* word-break: break-all; */
 	word-wrap: normal;
-	@apply text-slate-700;
 }
 
 .photo img {
@@ -87,7 +87,7 @@ h1, h2, h3 {
 
 .photo form {
 	@apply bottom-2 right-2;
-	@apply bg-cyan-600;
+	@apply bg-blue-400;
 	z-index: 1;
 }
 
@@ -115,11 +115,11 @@ form > div label {
 
 input:not([type="submit"]), textarea, select {
 	width: min(400px, 100%);
-	@apply p-2.5 m-1;
+	@apply py-1.5 px-2.5 m-1;
 	@apply rounded-md;
-	@apply text-white;
-	@apply bg-cyan-700;
-	@apply placeholder-cyan-900;
+	@apply text-black;
+	@apply bg-blue-200;
+	@apply placeholder-stone-500;
 	outline: none;
 	border: none;
 }
@@ -131,14 +131,14 @@ input:not([type="submit"]), textarea, select {
 }
 
 input[type=submit] {
-	@apply px-7 py-2.5;
+	@apply px-7 py-1.5;
 	@apply text-white;
-	@apply bg-cyan-800;
+	@apply bg-stone-900;
 	@apply m-3 font-bold;
 	border: none;
 	font-size: 16px;
-	letter-spacing: 0.6px;
+	letter-spacing: 0.5px;
 	font-family: sans-serif;
 	text-transform: capitalize;
-	@apply rounded-full;
+	@apply rounded-lg;
 }
